turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:2: error: missing argument list for method right in class Turtle
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `right _` or `right(_)` instead of `right`.
    right,
    ^